--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ on:
     branches: [ "master" ]
   workflow_dispatch:
 jobs:
-  test:
+  tests:
     name: Unit tests
     runs-on: ubuntu-latest
     steps:
