--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -108,3 +108,19 @@ jobs:
           name: artifact
           #From this path
           path: target/data-0.0.1-SNAPSHOT.jar
+  docker-build-push:
+    needs: build
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Log in to DigitalOcean Container Registry
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DO_PAT }}
+      - name: Build Docker Image
+        run: |
+          docker build -t registry.digitalocean.com/cicd-spring-boot/cicd-spring-boot:${{ github.sha }} .
+      - name: Push Docker Image
+        run: |
+          docker push registry.digitalocean.com/cicd-spring-boot/cicd-spring-boot:${{ github.sha }}
