--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-## This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-## For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-#
-## This workflow uses actions that are not certified by GitHub.
-## They are provided by a third-party and are governed by
-## separate terms of service, privacy policy, and support
-## documentation.
-#
 name: Java CICD Pipiline
 
 on:
@@ -19,94 +11,70 @@ jobs:
     name: Unit tests
     runs-on: ubuntu-latest
     steps:
-      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - uses: actions/checkout@v1
-      #Set up JDK 11
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-      #Set up Maven cache
       - name: Cache Maven packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
         uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      #Run Tests
       - name: Run Tests
         run: mvn -B test
   sonar:
-    #Depends on test's job
     needs: tests
     name: SonarCloud analysis
-    #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
-    #Job's steps
     steps:
-      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - uses: actions/checkout@v4
-      #Set up JDK 11
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-      #Set up SonarCloud cache
       - name: Cache SonarCloud packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      #Set up Maven cache
       - name: Cache Maven packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
         uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      #Analyze project with SonarCloud
       - name: Analyze with SonarCloud
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Isra1112_cicd-spring -X
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB2_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build:
-    #Depends on sonar's job
     needs: sonar
     name: Build
-    #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
     steps:
-      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - uses: actions/checkout@v4
-      #Set up JDK 11
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-      #Set up Maven cache
       - name: Cache Maven packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
         uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      #Build the application using Maven
       - name: Build with Maven
         run: mvn -B package -DskipTests --file pom.xml
-      #Build the application using Maven
+      - name: Verify Build Output
+        run: ls -R target
       - name: Upload JAR
-        #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
         uses: actions/upload-artifact@v3
         with:
-          #Set artifact name
-          name: artifact
-          #From this path
+          name: application-jar
           path: target/data-0.0.1-SNAPSHOT.jar
   docker-build-push:
     needs: build
@@ -118,13 +86,8 @@ jobs:
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DO_PAT }}
-      - name: List files in build context
-        run: |
-          ls -R
-          ls -R target
       - name: Build Docker Image
         run: |
-          
           docker build -t registry.digitalocean.com/cicd-spring-boot:${{ github.sha }} .
       - name: Push Docker Image
         run: |
