--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -82,6 +82,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Download JAR Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: application-jar
+      - name: Verify Downloaded Artifact
+        run: ls -R
       - name: Log in to DigitalOcean Container Registry
         uses: digitalocean/action-doctl@v2
         with:
