--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Download JAR Artifact
         uses: actions/download-artifact@v3
         with:
-          name: application-jar
+          name: CICD-0.0.1-SNAPSHOT.jar
       - name: Verify Downloaded Artifact
         run: ls -R
       - name: Log in to DigitalOcean Container Registry
