--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -82,12 +82,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Verify Downloaded Artifact
+        run: ls -R
       - name: Download JAR Artifact
         uses: actions/download-artifact@v3
         with:
-          name: CICD-0.0.1-SNAPSHOT.jar
-      - name: Verify Downloaded Artifact
-        run: ls -R
+          name: target/CICD-0.0.1-SNAPSHOT.jar
       - name: Log in to DigitalOcean Container Registry
         uses: digitalocean/action-doctl@v2
         with:
