--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Download JAR Artifact
         uses: actions/download-artifact@v3
         with:
-          name: target/CICD-0.0.1-SNAPSHOT.jar
+          name: application-jar
       - name: Log in to DigitalOcean Container Registry
         uses: digitalocean/action-doctl@v2
         with:
