--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -84,6 +84,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Verify Downloaded Artifact
         run: ls -R
+      - name: Debug Directory Structure
+        run: |
+          pwd
+          ls -R /home/runner/work
       - name: Download JAR Artifact
         uses: actions/download-artifact@v3
         with:
