--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:
+env:
+  REGISTRY: "registry.digitalocean.com/cicd-spring-boot"
+  IMAGE_NAME: "demo"
 jobs:
   tests:
     name: Unit tests
@@ -51,58 +54,95 @@ jobs:
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB2_TOKEN }}
 #          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  build:
-    needs: tests
-    name: Build
+#  build:
+#    needs: tests
+#    name: Build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Set up JDK
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: '17'
+#      - name: Cache Maven packages
+#        uses: actions/cache@v4
+#        with:
+#          path: ~/.m2
+#          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+#          restore-keys: ${{ runner.os }}-m2
+#      - name: Build with Maven
+#        run: mvn -B package -DskipTests --file pom.xml
+#      - name: Verify Build Output
+#        run: ls -R target
+#      - name: Upload JAR
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: application-jar
+#          path: target/CICD-0.0.1-SNAPSHOT.jar
+#  docker-build-push:
+#    needs: build
+#    name: Build and Push Docker Image
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Verify Downloaded Artifact
+#        run: ls -R
+#      - name: Debug Directory Structure
+#        run: |
+#          pwd
+#          ls -R /home/runner/work
+#      - name: Download JAR Artifact
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: application-jar
+##      - name: Move Downloaded Artifact to Target Directory
+##        run: |
+##          mkdir -p target
+##          mv application-jar target/
+#      - name: Log in to DigitalOcean Container Registry
+#        uses: digitalocean/action-doctl@v2
+#        with:
+#          token: ${{ secrets.DO_PAT }}
+#      - name: Build Docker Image
+#        run: |
+#          docker build . -t $(echo $REGISTRY):${{ github.sha }}
+#      - name: Push Docker Image
+#        run: |
+#          docker push registry.digitalocean.com/cicd-spring-boot:${{ github.sha }}
+
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK
-        uses: actions/setup-java@v1
+      - name: Code Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
-      - name: Cache Maven packages
-        uses: actions/cache@v4
+          distribution: 'adopt'
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build with Maven
-        run: mvn -B package -DskipTests --file pom.xml
-      - name: Verify Build Output
-        run: ls -R target
-      - name: Upload JAR
-        uses: actions/upload-artifact@v3
-        with:
-          name: application-jar
-          path: target/CICD-0.0.1-SNAPSHOT.jar
-  docker-build-push:
-    needs: build
-    name: Build and Push Docker Image
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Verify Downloaded Artifact
-        run: ls -R
-      - name: Debug Directory Structure
-        run: |
-          pwd
-          ls -R /home/runner/work
-      - name: Download JAR Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: application-jar
-#      - name: Move Downloaded Artifact to Target Directory
-#        run: |
-#          mkdir -p target
-#          mv application-jar target/
-      - name: Log in to DigitalOcean Container Registry
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Maven Package
+        run: ./mvnw clean package
+
+      - name: Build docker image
+        run: docker build . -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+
+      - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DO_PAT }}
-      - name: Build Docker Image
-        run: |
-          docker build -t registry.digitalocean.com/cicd-spring-boot:${{ github.sha }} .
-      - name: Push Docker Image
-        run: |
-          docker push registry.digitalocean.com/cicd-spring-boot:${{ github.sha }}
+
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 600
+
+      - name: Push image to DigitalOcean Container Registry
+        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
