--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -79,38 +79,10 @@ jobs:
 #        with:
 #          name: application-jar
 #          path: target/CICD-0.0.1-SNAPSHOT.jar
-#  docker-build-push:
-#    needs: build
-#    name: Build and Push Docker Image
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Verify Downloaded Artifact
-#        run: ls -R
-#      - name: Debug Directory Structure
-#        run: |
-#          pwd
-#          ls -R /home/runner/work
-#      - name: Download JAR Artifact
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: application-jar
-##      - name: Move Downloaded Artifact to Target Directory
-##        run: |
-##          mkdir -p target
-##          mv application-jar target/
-#      - name: Log in to DigitalOcean Container Registry
-#        uses: digitalocean/action-doctl@v2
-#        with:
-#          token: ${{ secrets.DO_PAT }}
-#      - name: Build Docker Image
-#        run: |
-#          docker build . -t $(echo $REGISTRY):${{ github.sha }}
-#      - name: Push Docker Image
-#        run: |
-#          docker push registry.digitalocean.com/cicd-spring-boot:${{ github.sha }}
+
 
   build_and_push:
+    needs: tests
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
@@ -131,7 +103,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Maven Package
-        run: ./mvnw clean package
+        run: ./mvn clean package
 
       - name: Build docker image
         run: docker build . -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
