--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -103,7 +103,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Maven Package
-        run: ./mvn clean package
+        run: mvn clean package
 
       - name: Build docker image
         run: docker build . -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
