--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -106,15 +106,15 @@ jobs:
         run: mvn clean package
 
       - name: Build docker image
-        run: docker build . -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+        run: docker build . -t $(echo $REGISTRY):$(echo $GITHUB_SHA | head -c7)
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DO_PAT }}
 
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 600
+#      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+#        run: doctl registry login --expiry-seconds 600
 
       - name: Push image to DigitalOcean Container Registry
-        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+        run: docker push $(echo $REGISTRY):$(echo $GITHUB_SHA | head -c7)
