--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=CICD
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cicd
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.host=localhost
